syntax = "proto3";

option csharp_namespace = "Route256.Week5.Homework.PriceCalculator.gRpcClient.Protos";

import "Protos/decimal.proto";

service Delivery{
    rpc Calculate(CalculateRequest) returns (CalculateResponse);
    rpc StreamCalculate(stream StreamCalculateRequest) returns (stream StreamCalculateResponse);
}

message CalculateRequest {
    int64 user_id = 1;
    repeated GoodProperies goods = 2;
}

message CalculateResponse {
    int64 calculation_id = 1;
    DecimalValue price = 2;
}

message StreamCalculateRequest {
    GoodProperies good = 2;
}

message StreamCalculateResponse {
    DecimalValue price = 1;
}

message GoodProperies {
    double height = 1;
    double length = 2;
    double width = 3;
    double weight = 4;
}
